@@ -7,10 +7,11 @@ Version 3.0.0 ->
  - added port of ICUFoldingFilter using C++ ICU's Normalizer2 via PyICU
  - added port of ICUTransformFilter using C++ ICU's Transliterator via PyICU
  - PyLucene built with JCC 2.6
- - fixed "Lucene in Action" samples leftover on old API
+ - fixed "Lucene in Action" samples left over on old API
  - improved support for adding optional contrib modules
  - added --package java.util.regex to wrap constructors on PatternAnalyzer
  - fixed mansearch.py sample to reflect API changes
+ - rearranged Lucene source checkout tree to reflect new constraints
  - 
 
 Version 2.9.0 -> 3.0.0
